option java_package = "com.google.play.proto";
option java_outer_classname = "Requests";

import "Asset.proto";
import "Billing.proto";
import "Browse.proto";
import "Carrier.proto";
import "Category.proto";
import "Challenges.proto";
import "Comment.proto";
import "Documents.proto";
import "Download.proto";
import "GooglePlus.proto";
import "BadgeImage.proto";
import "InApp.proto";
import "Instruments.proto";
import "Log.proto";
import "Library.proto";
import "Notifications.proto";
import "Paypal.proto";
import "Promo.proto";
import "Purchase.proto";
import "Query.proto";
import "Rating.proto";
import "Reviews.proto";
import "Search.proto";
import "Uninstall.proto";
import "Unsorted.proto";
import "UploadDeviceConfig.proto";

message Payload {
	optional ListResponse listResponse = 1;
	optional DetailsResponse detailsResponse = 2;
	optional ReviewResponse reviewResponse = 3;
	optional BuyResponse buyResponse = 4;
	optional SearchResponse searchResponse = 5;
	optional TocResponse tocResponse = 6;
	optional BrowseResponse browseResponse = 7;
	optional PurchaseStatusResponse purchaseStatusResponse = 8;
	optional UpdateInstrumentResponse updateInstrumentResponse = 9;
	optional LogResponse logResponse = 10;
	optional CheckInstrumentResponse checkInstrumentResponse = 11;
	optional PlusOneResponse plusOneResponse = 12;
	optional FlagContentResponse flagContentResponse = 13;
	optional AckNotificationResponse ackNotificationResponse = 14;
	optional InitiateAssociationResponse initiateAssociationResponse = 15;
	optional VerifyAssociationResponse verifyAssociationResponse = 16;
	optional LibraryReplicationResponse libraryReplicationResponse = 17;
	optional RevokeResponse revokeResponse = 18;
	optional BulkDetailsResponse bulkDetailsResponse = 19;
	optional ResolveLinkResponse resolveLinkResponse = 20;
	optional DeliveryResponse deliveryResponse = 21;
	optional AcceptTosResponse acceptTosResponse = 22;
	optional RateSuggestedContentResponse rateSuggestedContentResponse = 23;
	optional CheckPromoOfferResponse checkPromoOfferResponse = 24;

	optional UploadDeviceConfigResponse uploadDeviceConfigResponse = 28;
}

message RequestPropertiesProto {
	optional string userAuthToken = 1;
	optional bool userAuthTokenSecure = 2;
	optional int32 softwareVersion = 3;
	optional string aid = 4;
	optional string productNameAndVersion = 5;
	optional string userLanguage = 6;
	optional string userCountry = 7;
	optional string operatorName = 8;
	optional string simOperatorName = 9;
	optional string operatorNumericName = 10;
	optional string simOperatorNumericName = 11;
	optional string clientId = 12;
	optional string loggingId = 13;
}

message InnerRequestProto {
	optional RequestSpecificPropertiesProto requestSpecificProperties = 3;
	optional AssetsRequestProto assetRequest = 4;
	optional CommentsRequestProto commentsRequest = 5;
	optional ModifyCommentRequestProto modifyCommentRequest = 6;
	optional PurchasePostRequestProto purchasePostRequest = 7;
	optional PurchaseOrderRequestProto purchaseOrderRequest = 8;
	optional ContentSyncRequestProto contentSyncRequest = 9;
	optional GetAssetRequestProto getAssetRequest = 10;
	optional GetImageRequestProto getImageRequest = 11;
	optional RefundRequestProto refundRequest = 12;
	optional PurchaseMetadataRequestProto purchaseMetadataRequest = 13;
	optional GetSubCategoriesRequestProto subCategoriesRequest = 14;
	optional UninstallReasonRequestProto uninstallReasonRequest = 16;
	optional RateCommentRequestProto rateCommentRequest = 17;
	optional CheckLicenseRequestProto checkLicenseRequest = 18;
	optional GetMarketMetadataRequestProto getMarketMetadataRequest = 19;
	optional GetCategoriesRequestProto getCategoriesRequest = 21;
	optional GetCarrierInfoRequestProto getCarrierInfoRequest = 22;
	optional RemoveAssetRequestProto removeAssetRequest = 23;
	optional RestoreApplicationsRequestProto restoreApplicationsRequest = 24;
	optional QuerySuggestionRequestProto querySuggestionRequest = 25;
	optional BillingEventRequestProto billingEventRequest = 26;
	optional PaypalPreapprovalRequestProto paypalPreapprovalRequest = 27;
	optional PaypalPreapprovalDetailsRequestProto paypalPreapprovalDetailsRequest = 28;
	optional PaypalCreateAccountRequestProto paypalCreateAccountRequest = 29;
	optional PaypalPreapprovalCredentialsRequestProto paypalPreapprovalCredentialsRequest = 30;
	optional InAppRestoreTransactionsRequestProto inAppRestoreTransactionsRequest = 31;
	optional InAppPurchaseInformationRequestProto inAppPurchaseInformationRequest = 32;
	optional CheckForNotificationsRequestProto checkForNotificationsRequest = 33;
	optional AckNotificationsRequestProto ackNotificationsRequest = 34;
	optional PurchaseProductRequestProto purchaseProductRequest = 35;
	optional ReconstructDatabaseRequestProto reconstructDatabaseRequest = 36;
	optional PaypalMassageAddressRequestProto paypalMassageAddressRequest = 37;
	optional GetAddressSnippetRequestProto getAddressSnippetRequest = 38;
}

message RequestProto {
	optional RequestPropertiesProto requestProperties = 1;
	repeated InnerRequestProto request = 2;
}

message RequestSpecificPropertiesProto {
	optional string ifNoneMatch = 1;
}

message ResponsePropertiesProto {
	optional int32 result = 1;
	optional int32 maxAge = 2;
	optional string etag = 3;
	optional int32 serverVersion = 4;
	optional int32 maxAgeConsumable = 6;
	optional string errorMessage = 7;
	repeated InputValidationError errorInputField = 8;
}

message InnerResponseProto {
	optional ResponsePropertiesProto responseProperties = 2;
	optional AssetsResponseProto assetsResponse = 3;
	optional CommentsResponseProto commentsResponse = 4;
	optional ModifyCommentResponseProto modifyCommentResponse = 5;
	optional PurchasePostResponseProto purchasePostResponse = 6;
	optional PurchaseOrderResponseProto purchaseOrderResponse = 7;
	optional ContentSyncResponseProto contentSyncResponse = 8;
	optional GetAssetResponseProto getAssetResponse = 9;
	optional GetImageResponseProto getImageResponse = 10;
	optional RefundResponseProto refundResponse = 11;
	optional PurchaseMetadataResponseProto purchaseMetadataResponse = 12;
	optional GetSubCategoriesResponseProto subCategoriesResponse = 13;
	optional UninstallReasonResponseProto uninstallReasonResponse = 15;
	optional RateCommentResponseProto rateCommentResponse = 16;
	optional CheckLicenseResponseProto checkLicenseResponse = 17;
	optional GetMarketMetadataResponseProto getMarketMetadataResponse = 18;
	repeated PrefetchedBundleProto prefetchedBundle = 19;
	optional GetCategoriesResponseProto getCategoriesResponse = 20;
	optional GetCarrierInfoResponseProto getCarrierInfoResponse = 21;
	optional RestoreApplicationsResponseProto restoreApplicationResponse = 23;
	optional QuerySuggestionResponseProto querySuggestionResponse = 24;
	optional BillingEventResponseProto billingEventResponse = 25;
	optional PaypalPreapprovalResponseProto paypalPreapprovalResponse = 26;
	optional PaypalPreapprovalDetailsResponseProto paypalPreapprovalDetailsResponse = 27;
	optional PaypalCreateAccountResponseProto paypalCreateAccountResponse = 28;
	optional PaypalPreapprovalCredentialsResponseProto paypalPreapprovalCredentialsResponse = 29;
	optional InAppRestoreTransactionsResponseProto inAppRestoreTransactionsResponse = 30;
	optional InAppPurchaseInformationResponseProto inAppPurchaseInformationResponse = 31;
	optional CheckForNotificationsResponseProto checkForNotificationsResponse = 32;
	optional AckNotificationsResponseProto ackNotificationsResponse = 33;
	optional PurchaseProductResponseProto purchaseProductResponse = 34;
	optional ReconstructDatabaseResponseProto reconstructDatabaseResponse = 35;
	optional PaypalMassageAddressResponseProto paypalMassageAddressResponse = 36;
	optional GetAddressSnippetResponseProto getAddressSnippetResponse = 37;
}

message ResponseProto {
	repeated InnerResponseProto Response = 1;
	optional PendingNotificationsProto pendingNotifications = 38;
}

message ResponseWrapper {
	optional Payload payload = 1;
	optional ServerCommands commands = 2;
	repeated PreFetch preFetch = 3;
	repeated Notification notification = 4;
}

message SingleRequestProto {
	optional RequestSpecificPropertiesProto requestSpecificProperties = 3;
	optional AssetsRequestProto assetRequest = 4;
	optional CommentsRequestProto commentsRequest = 5;
	optional ModifyCommentRequestProto modifyCommentRequest = 6;
	optional PurchasePostRequestProto purchasePostRequest = 7;
	optional PurchaseOrderRequestProto purchaseOrderRequest = 8;
	optional ContentSyncRequestProto contentSyncRequest = 9;
	optional GetAssetRequestProto getAssetRequest = 10;
	optional GetImageRequestProto getImageRequest = 11;
	optional RefundRequestProto refundRequest = 12;
	optional PurchaseMetadataRequestProto purchaseMetadataRequest = 13;
	optional GetSubCategoriesRequestProto subCategoriesRequest = 14;
	optional UninstallReasonRequestProto uninstallReasonRequest = 16;
	optional RateCommentRequestProto rateCommentRequest = 17;
	optional CheckLicenseRequestProto checkLicenseRequest = 18;
	optional GetMarketMetadataRequestProto getMarketMetadataRequest = 19;
	optional GetCategoriesRequestProto getCategoriesRequest = 21;
	optional GetCarrierInfoRequestProto getCarrierInfoRequest = 22;
	optional RemoveAssetRequestProto removeAssetRequest = 23;
	optional RestoreApplicationsRequestProto restoreApplicationsRequest = 24;
	optional QuerySuggestionRequestProto querySuggestionRequest = 25;
	optional BillingEventRequestProto billingEventRequest = 26;
	optional PaypalPreapprovalRequestProto paypalPreapprovalRequest = 27;
	optional PaypalPreapprovalDetailsRequestProto
	paypalPreapprovalDetailsRequest = 28;
	optional PaypalCreateAccountRequestProto paypalCreateAccountRequest = 29;
	optional PaypalPreapprovalCredentialsRequestProto
	paypalPreapprovalCredentialsRequest = 30;
	optional InAppRestoreTransactionsRequestProto
	inAppRestoreTransactionsRequest = 31;
	optional InAppPurchaseInformationRequestProto
	getInAppPurchaseInformationRequest = 32;
	optional CheckForNotificationsRequestProto checkForNotificationsRequest = 33;
	optional AckNotificationsRequestProto ackNotificationsRequest = 34;
	optional PurchaseProductRequestProto purchaseProductRequest = 35;
	optional ReconstructDatabaseRequestProto reconstructDatabaseRequest = 36;
	optional PaypalMassageAddressRequestProto paypalMassageAddressRequest = 37;
	optional GetAddressSnippetRequestProto getAddressSnippetRequest = 38;
}

message SingleResponseProto {
	optional ResponsePropertiesProto responseProperties = 2;
	optional AssetsResponseProto assetsResponse = 3;
	optional CommentsResponseProto commentsResponse = 4;
	optional ModifyCommentResponseProto modifyCommentResponse = 5;
	optional PurchasePostResponseProto purchasePostResponse = 6;
	optional PurchaseOrderResponseProto purchaseOrderResponse = 7;
	optional ContentSyncResponseProto contentSyncResponse = 8;
	optional GetAssetResponseProto getAssetResponse = 9;
	optional GetImageResponseProto getImageResponse = 10;
	optional RefundResponseProto refundResponse = 11;
	optional PurchaseMetadataResponseProto purchaseMetadataResponse = 12;
	optional GetSubCategoriesResponseProto subCategoriesResponse = 13;
	optional UninstallReasonResponseProto uninstallReasonResponse = 15;
	optional RateCommentResponseProto rateCommentResponse = 16;
	optional CheckLicenseResponseProto checkLicenseResponse = 17;
	optional GetMarketMetadataResponseProto getMarketMetadataResponse = 18;
	optional GetCategoriesResponseProto getCategoriesResponse = 20;
	optional GetCarrierInfoResponseProto getCarrierInfoResponse = 21;
	optional RestoreApplicationsResponseProto restoreApplicationResponse = 23;
	optional QuerySuggestionResponseProto querySuggestionResponse = 24;
	optional BillingEventResponseProto billingEventResponse = 25;
	optional PaypalPreapprovalResponseProto paypalPreapprovalResponse = 26;
	optional PaypalPreapprovalDetailsResponseProto
	paypalPreapprovalDetailsResponse = 27;
	optional PaypalCreateAccountResponseProto paypalCreateAccountResponse = 28;
	optional PaypalPreapprovalCredentialsResponseProto
	paypalPreapprovalCredentialsResponse = 29;
	optional InAppRestoreTransactionsResponseProto
	inAppRestoreTransactionsResponse = 30;
	optional InAppPurchaseInformationResponseProto
	getInAppPurchaseInformationResponse = 31;
	optional CheckForNotificationsResponseProto
	checkForNotificationsResponse = 32;
	optional AckNotificationsResponseProto ackNotificationsResponse = 33;
	optional PurchaseProductResponseProto purchaseProductResponse = 34;
	optional ReconstructDatabaseResponseProto reconstructDatabaseResponse = 35;
	optional PaypalMassageAddressResponseProto paypalMassageAddressResponse = 36;
	optional GetAddressSnippetResponseProto getAddressSnippetResponse = 37;
}

message PreFetch {
	optional string url = 1;
	optional bytes response = 2;
	optional string etag = 3;
	optional int64 ttl = 4;
	optional int64 softTtl = 5;
}

message PrefetchedBundleProto {
	optional SingleRequestProto request = 1;
	optional SingleResponseProto response = 2;
}
